fix(test): getFirst() durch get(0) für Java 17 ersetzen
List.getFirst() ist erst ab Java 21 verfügbar; der Docker-Build nutzt Temurin 17.

Co-authored-by: Cursor <cursoragent@cursor.com>